--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "mocha-param": "^2.0.0"
   },
   "scripts": {
     "test": "mocha --inspect-brk --exit"
